@@ -207,6 +207,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1628: log this message at debug level : 'Pig Internal storage in use' (thejas)
+
 PIG-1636: Scalar fail if the scalar variable is generated by limit (daijy)
 
 PIG-1605: PIG-1605: Adding soft link to plan to solve input file dependency
